WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
132034
ASSERTION FAILED: scrollerImp == scrollbarPainterForScrollbar(_scrollbar) on two API tests
https://bugs.webkit.org/show_bug.cgi?id=132034
Summary
ASSERTION FAILED: scrollerImp == scrollbarPainterForScrollbar(_scrollbar) on ...
Tim Horton
Reported
2014-04-22 18:33:46 PDT
scrollerImpWithStyle:controlSize:horizontal:replacingScrollerImp: moves the delegate from the old scrollerImp to the new one, and also happens to call shouldUseLayerPerPartForScrollerImp. Since scrollerImpWithStyle: has not returned yet, the scrollbarPainterForScrollbar still returns the old scrollerImp, so this assertion fires. It's safe to remove this because supportsUpdateOnSecondaryThread doesn't make use of the imp. <
rdar://problem/16624332
>
Attachments
patch
(1.76 KB, patch)
2014-04-22 18:34 PDT
,
Tim Horton
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2014-04-22 18:34:50 PDT
Created
attachment 229937
[details]
patch
Tim Horton
Comment 2
2014-04-22 18:38:20 PDT
http://trac.webkit.org/changeset/167693
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug